--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -38,6 +38,10 @@
   --callout-border-rgb: 172, 175, 176;
   --card-rgb: 180, 185, 188;
   --card-border-rgb: 131, 134, 135;
+
+  --primary-color: #1362C2;
+  --text-regular-color: #474747;
+  --text-light-color: #ABB5CC;
 }
 
 @media (prefers-color-scheme: dark) {
@@ -70,6 +74,10 @@
     --callout-border-rgb: 108, 108, 108;
     --card-rgb: 100, 100, 100;
     --card-border-rgb: 200, 200, 200;
+
+    --primary-color: #1362C2;
+    --text-regular-color: #474747;
+    --text-light-color: #ABB5CC;
   }
 }
 
