--- a/src/styles/Footer.module.scss
+++ b/src/styles/Footer.module.scss
@@ -1,11 +1,16 @@
 .footer {
   &__container {
+    @media (min-width: 567px) {
+      border-top-left-radius: 80px;
+      border-top-right-radius: 80px;
+    }
+
     width: 100%;
     position: fixed;
     bottom: 0;
     padding: 1rem;
-    border-top-left-radius: 80px;
-    border-top-right-radius: 80px;
-    background-color: #F5F5F5;
+    border-top-left-radius: 40px;
+    border-top-right-radius: 40px;
+    background-color: #f5f5f5;
   }
 }
