--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -167,6 +167,7 @@ html,
 body {
   max-width: 100vw;
   overflow-x: hidden;
+  font-family: 'IRANSans', 'Courier New', 'Courier', 'monospace' !important;
 }
 
 body {
