update link text & contact us item title font weights

--- a/src/styles/Link.module.scss
+++ b/src/styles/Link.module.scss
@@ -3,7 +3,7 @@
 
   &__text {
     font-size: 13px;
-    font-family: regular;
+    font-weight: normal;
     color: var(--text-regular-color)
   }
 
