add ip card component

--- a/src/styles/Card.module.scss
+++ b/src/styles/Card.module.scss
@@ -1,5 +1,8 @@
 .card {
   &__container {
+    width: max-content;
+    max-width: 649px;
+    height: max-content;
     border-radius: 15px;
     background-color: white;
     border-radius: 15px;
