--- a/src/styles/IPDataTable.module.scss
+++ b/src/styles/IPDataTable.module.scss
@@ -7,25 +7,27 @@
   }
 
   &__table {
-    
-    & th:nth-child(1) {   
-      border: 1px solid #ccc;
-      padding: 1rem;
-      padding-right: 10rem;
-      background-color: white;
-      color: var(--primary-color);
-      font-weight: normal;
-      font-size: 14px;
-    }
 
-    & th:nth-child(2) {   
+    width: 557px;
+    min-width: 557px;
+
+    & th:nth-child(1) {
       border: 1px solid #ccc;
       padding: 1rem;
-      padding-left: 6rem;
       background-color: #f5f5f5;
       font-style: normal;
       font-weight: 500;
       font-size: 16px;
+    }
+
+    & th:nth-child(2) {
+      border: 1px solid #ccc;
+      padding: 1rem;
+      background-color: white;
+      color: var(--primary-color);
+      font-weight: normal;
+      font-size: 14px;
+      text-align: end;
     }
   }
 }
