--- a/src/styles/IPAPI.module.scss
+++ b/src/styles/IPAPI.module.scss
@@ -15,21 +15,17 @@
     color: var(--text-regular-color);
   }
 
-  &-items {
-    gap: 2rem;
-  }
-
   &-item {
     color: var(--primary-color);
     font-size: 14px;
     font-style: normal;
     font-weight: 500;
+    padding: 0.5rem 1rem;
     cursor: pointer;
 
     &__selected {
       background-color: var(--primary-color);
       color: white;
-      padding: 0.5rem 1rem;
       border-radius: 5px;
     }
   }
@@ -76,6 +72,11 @@
       color: white;
       background-color: var(--primary-color);
       padding: 0.3rem 1rem;
+
+      &:hover {
+        background-color: var(--primary-color);
+        color: white;
+      }
     }
   }
 }
