add ip api input placeholder

--- a/src/styles/IPAPI.module.scss
+++ b/src/styles/IPAPI.module.scss
@@ -69,6 +69,13 @@
       &:focus {
         outline: none;
       }
+
+      &::placeholder {
+        font-size: 13px;
+        font-style: normal;
+        font-weight: normal;
+        color: var(--text-light-color);
+      }
     }
 
     &__submit {
