--- a/src/styles/ContactUs.module.scss
+++ b/src/styles/ContactUs.module.scss
@@ -4,4 +4,21 @@
     font-weight: bold;
     font-size: 16px;
   }
+
+  &-item {
+    &__title {
+      color: var(--text-regular-text);
+      font-size: 14px;
+      font-weight: 500;
+    }
+  
+    &__value {
+      color: var(--text-regular-text);
+      font-size: 13px;
+    }
+  
+    &__icon {
+      color: var(--primary-color);
+    }
+  }
 }
