--- a/src/styles/FAQ.module.scss
+++ b/src/styles/FAQ.module.scss
@@ -7,4 +7,20 @@
   &__arrow {
     color: var(--primary-color);
   }
+  
+  &-item {
+    &__question {
+      font-weight: bold;
+      font-size: 14px;
+    }
+  
+    &__answer {
+      font-weight: normal;
+      font-size: 13px;
+    }
+  
+    &__question, &__answer {
+      color: var(--text-regular-color);
+    }
+  }
 }
