add color prop to contact us items & valid hrefs

--- a/src/styles/ContactUs.module.scss
+++ b/src/styles/ContactUs.module.scss
@@ -15,6 +15,7 @@
     &__value {
       color: var(--text-regular-text);
       font-size: 13px;
+      text-decoration: none;
     }
   
     &__icon {
