--- a/src/styles/Map.module.scss
+++ b/src/styles/Map.module.scss
@@ -1,10 +1,15 @@
 .map {
   width: 100%;
-  height: 100%;
-  position: absolute;
-  top: 0;
-  left: 0;
-  right: 0;
-  bottom: 0;
-  z-index: -1;
+  height: 500px;
+
+  &-fixed {
+    height: 100%;
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    z-index: -1;
+  }
+
 }
