--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -166,7 +166,7 @@
 html,
 body {
   max-width: 100vw;
-  overflow-x: hidden;
+  overflow-x: auto;
   font-family: 'IRANSans', 'Courier New', 'Courier', 'monospace' !important;
 }
 
