complete responsive ui for mobile

--- a/src/styles/IPAPI.module.scss
+++ b/src/styles/IPAPI.module.scss
@@ -79,6 +79,7 @@
     }
 
     &__submit {
+      width: max-content;
       border-radius: 5px;
       border: 1px solid #ccc;
       color: white;
