--- a/src/styles/IPAPI.module.scss
+++ b/src/styles/IPAPI.module.scss
@@ -40,10 +40,12 @@
     }
 
     &__value {
+      width: 100%;
       color: black;
       font-size: 14px;
       font-style: normal;
       font-weight: normal;
+      overflow-x: auto;
     }
   }
 
