--- a/src/styles/IPAPI.module.scss
+++ b/src/styles/IPAPI.module.scss
@@ -40,12 +40,25 @@
     }
 
     &__value {
-      width: 100%;
       color: black;
       font-size: 14px;
       font-style: normal;
       font-weight: normal;
       overflow-x: auto;
+      cursor: pointer;
+    }
+
+    &__copied {
+      &-value {
+        color: #46C93A;
+        font-size: 13px;
+        font-style: normal;
+        font-weight: bold;
+      }
+
+      &-icon {
+        color: #46C93A;
+      }
     }
   }
 
