--- a/src/styles/Map.module.scss
+++ b/src/styles/Map.module.scss
@@ -4,11 +4,13 @@
 
   &-fixed {
     height: 100%;
-    position: absolute;
+    position: fixed;
     top: 0;
     left: 0;
     right: 0;
     bottom: 0;
+    margin: 0;
+    padding: 0;
     z-index: -1;
   }
 
